force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/Salesforce_IT_Project_Tracker__c.object-meta.xml
<CustomObject>
    <description>For the internal IT team to track the Salesforce projects</description>
    <label>SFE IT Projects</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce IT Project Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Force Effectiveness IT Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>