force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <inlineHelpText>Other Give Details in Notes field</inlineHelpText>
    <label>Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Avalanche Bell</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Demand Tools</fullName>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
            <value>
                <fullName>GBI</fullName>
            </value>
            <value>
                <fullName>GIW</fullName>
            </value>
            <value>
                <fullName>Grid Buddy</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>NOVO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PROS</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Tibco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>