force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arun Singh</fullName>
            </value>
            <value>
                <fullName>Kathy Nulf</fullName>
            </value>
            <value>
                <fullName>Lori Mishler</fullName>
            </value>
            <value>
                <fullName>Manish Vashistha</fullName>
            </value>
            <value>
                <fullName>Ryan Sobecki</fullName>
            </value>
            <value>
                <fullName>Stephanie Ault</fullName>
            </value>
            <value>
                <fullName>Steven Steier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>