force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Expected_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_to_Complete__c</fullName>
    <label>Expected Hours to Complete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>