force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Put Details in Comments</inlineHelpText>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CMF&amp;T</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Enterprise Solutions</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Hip Presevation</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Internal IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>Med Ed</fullName>
            </value>
            <value>
                <fullName>mymobility</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personalized Solutions</fullName>
            </value>
            <value>
                <fullName>ROSA</fullName>
                <label>Robotics &amp; Technology</label>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Technical Sales Support</fullName>
            </value>
            <value>
                <fullName>Trade Compliance</fullName>
            </value>
            <value>
                <fullName>ZB Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>