force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Week__c</fullName>
    <label>Hours Per Week</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>