force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Under 40 hours</fullName>
            </value>
            <value>
                <fullName>Medium 41 to 120</fullName>
            </value>
            <value>
                <fullName>Large 120+</fullName>
            </value>
            <value>
                <fullName>PMO 500+</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>