force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/fields/SNOW_Ticket__c.field-meta.xml
<CustomField>
    <fullName>SNOW_Ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SNOW Ticket</label>
    <length>15</length>
    <type>Text</type>
</CustomField>