force-app/main/default/objects/Salesforce_IT_Project_Tracker__c/listViews/All_Not_Completed.listView-meta.xml
<ListView>
    <fullName>All_Not_Completed</fullName>
    <columns>NAME</columns>
    <columns>Assigned__c</columns>
    <columns>Applications__c</columns>
    <columns>Group__c</columns>
    <columns>Notes__c</columns>
    <columns>Priority__c</columns>
    <columns>Size__c</columns>
    <columns>SNOW_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>All Not Completed</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>